--- a/CoolChat.Web/app/chat/chat.component.less
+++ b/CoolChat.Web/app/chat/chat.component.less
@@ -32,19 +32,12 @@
     span.chat-list-ico {
         position: absolute;
         right: 20px;
-        top: 0px;
+        top: 50%;
+        transform: translateY(-50%);
         display: none;
 
         @media (max-width: 768px) {
             display: inline-block;
-        }
-
-        @media (max-height: 600px) {
-            top: 0;
-        }
-
-        @media (min-height: 600px) and (max-height: 820px) {
-            top: 5px;
         }
 
         &:hover {
